Реализация 3 домашки с паттернами